--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,6 +10,8 @@
         <input type="text" id="title" name="title">
         <br>
         <label for="author">Author:</label>
+        <input type="text" id="author" name="author">
+        <br>
         <input type="submit" value="create">
     </form>
     <a href="/">Back to List</a>
