--- a/public/views/update.ejs
+++ b/public/views/update.ejs
@@ -3,6 +3,8 @@
 <htmi>
    <head>
        <tiile>Update Book</tiile>
+    <link rel="stylesheet" href="../css/style.css" />
+
    </head>
 <body>
    <h1>Update Book</h1>
